# surfaceNetsForR

./: README.md  stack.yaml  surfaceNetsForR.cabal
C/: makeOutputList.c
src/: Lib.hs
src-dll/: SurfaceNetsR.hs
