name:                surfaceNetsForR
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/surfaceNetsForR#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2019 Stéphane Laurent
category:            Algorithm
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , inline-r
                     , containers
                     , ilist
                     , vector
  default-language:    Haskell2010
  default-extensions:  ForeignFunctionInterface
                     , DataKinds
  include-dirs:        C
  C-sources:           C/makeOutputList.c

foreign-library surfaceNets
  buildable:           True
  type:                native-shared
  if os(Windows)
    options: standalone
  other-modules:       SurfaceNetsR
  build-depends:       base >=4.7 && <5.0
                     , surfaceNetsForR
                     , inline-r
  hs-source-dirs:      src-dll
  c-sources:           StartEnd.c
  default-language:    Haskell2010
  extensions:          ForeignFunctionInterface
                     , DataKinds

source-repository head
  type:     git
  location: https://github.com/stla/surfaceNetsForR
